# my_first_llm

./: .gitignore  Dockerfile  Makefile  README.md  first_llm_llama_linkedin.py  llm_Chain_PRs.py  llm_store_embedding_text.py  llm_store_embedding_text_separator.py  llm_store_embedding_text_tokens.py  llm_stuffing.py  main.py  ollama_langchain.py  pyproject.toml  python_223_llm_llama.py  requirements.txt  star_wars_e_4.txt  star_wars_e_5.txt  yoda_fencing.txt
0-first_steps/: README.md  first_csv_html_pdf_llama.py  first_llm_llama.py  ollama_langchain.py
0-first_steps/src/: README.md  first_csv_pdf_llama.py  first_llm_llama.py
1-third_party/: README.md
2-python2_converter/: README.md  python_223_llm_llama.py  test_converted.py
3-embeddings/: README.md  pdf_rag.py
3-embeddings/embedings/: llm_csv_embedding.py  llm_multi_query_retrieval.py  llm_store_embedding_text_tokens.py
4-chains/: llm_Chain_blogpost.py  wikipedia_chain.py
5-MCP/: README.md  client.py  docker-compose.yaml  server.py
5-MCP/data/: kb.json
5-MCP/simple_stdio/: client.py  server.py
MCP/: Dockerfile  README.md
MCP/simple_sse/: client.py  server.py
chains/: README.md
data/: Script_E04.txt  star_wars_e_6.txt  view-source_https___www.starwars.com_databank_luke-skywalker.html  yoda_force.txt
examples/: pdf_rag.py
examples/embedings/: README.md  llm_csv_embedding.py  llm_text_embedding.py
models/: .gitignore
python2_code/: python_223_llm_llama.py  test.py
