[project]
name = "my-first-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "ctransformers>=0.2.27",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "lxml>=6.0.2",
    "mcp>=1.14.1",
    "pypdf>=6.1.0",
]
